--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     <version>4.4</version>
     <scope>test</scope>
 </dependency>
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>3.9.0</version>
+<scope>QA</scope>
+</dependency>
   </dependencies>
   <build>
     <finalName>Helloworldwebapp</finalName>
