change in master

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>Helloworldwebapp</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Helloworldwebapp Maven Webapp</name>
+  <name>Helloworldwebapp GIT Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
 <dependency>
